@@ -1,4 +1,5 @@
 HEAD
+    + Added support for global variables in test suites
     + Add support for trusty to properly bring up network interfaces
     + Remove TryCatch::Lite depend in anste-slave
     + Fix input read when asking for a character
